tests/errors/surf_arity_15.experr
ord() missing required argument 'char'
